apps/open-webui/networkpolicy-open-webui.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: open-webui
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: open-webui
  ingress:
    # From Ingress
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

  egress:
    # To DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # To pods in the same namespace (CNPG)
    - toEndpoints:
        - {}
    # To model servers
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ai
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    # To Authentik
    - toServices:
        - k8sService:
            serviceName: authentik-server
            namespace: authentik
    # To the Internet
    - toEntities:
        - world
